--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ preserve prior skills it actively enhances them, demonstrating positive backward
 
 <footer class="footer">
   <div class="content has-text-centered">
-    <p></p>
+    <p>This work is done in the "E-Learning and HCI Lab" of Department of Computer Applications, National Institute of Technology, Tiruchirappalli</p>
   </div>
 </footer>
 
