Added Paper Link to  index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
 
           <div class="publication-links mt-4">
-            <a href="./paper.pdf" class="button is-dark is-rounded">
+            <a href="https://openreview.net/forum?id=Pf7sa41jkz#discussion" class="button is-dark is-rounded">
               <span class="icon"><i class="fas fa-file-pdf"></i></span>
               <span>Paper</span>
             </a>
